data/derived/comb/progs/unify/prog4367.ml.out
Characters 105-109:
  buildSine(build(rand(0,5), depth - 1))
                  ^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
